--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
   "scripts": {
     "test": "standard && ava"
   },
+  "engines": {
+    "node": ">=6.0.0"
+  },
   "devDependencies": {
-    "ava": "^3.15.0",
-    "standard": "^16.0.3"
+    "ava": "^1.4.1",
+    "standard": "^11.0.1"
   }
 }
